# o-lib

./: .gitignore  LICENSE  README.md  app.py  config.ini  main.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
.github/workflows/: build.yml
app/: __init__.py
app/common/: __init__.py  config.py  resources.py  style_sheet.py
app/tools/: __init__.py  olib_download.py  olib_search.py
app/utils/: __init__.py  mod_check.py  mod_domain.py  mod_env.py  mod_log.py  mod_uuid.py
app/views/: __init__.py  downloadInterface.py  main_window.py  searchInterface.py  setting_interface.py
controllers/: __init__.py  zlibdownload.py  zlibsearch.py
dev_docs/: architecture-vendor-split.md
dev_docs/refs/: olib-api-plugin-rs.md
scripts/: bump-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  cover_proxy.rs  database.rs  download.rs  lan_server.rs  lib.rs  main.rs  tray.rs  weread.rs
src-tauri/src/commands/: auth_commands.rs  book_commands.rs  bookshelf_commands.rs  config_commands.rs  cover_commands.rs  download_commands.rs  favorite_commands.rs  lan_commands.rs  mod.rs  reader_commands.rs  search_commands.rs  shortcut_commands.rs  weread_commands.rs
src/components/: AccountSwitcher.tsx  BookDetailModal.tsx  (+9 more)
tools/: bump-version.mjs
utils/: __init__.py  autoGetCookies.py  config.py  log.py
views/: __init__.py  config_window_func.py  config_window_ui.py  main_window_func.py  main_window_ui.py  测试窗口.py
(+44 files in other folders)
