[package]
name = "olib-fluent"
version = "3.2.1"
description = "Olib - An open-source desktop client for searching, downloading, and managing e-books"
authors = ["shiyi0x7f"]
edition = "2021"

[lib]
name = "olib_fluent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] } 

[dependencies]
# 私有 API 客户端 + 数据模型 + 内置域名（源码在 vendor/，不入公开仓库）
olib_api = { path = "../vendor/olib-api-plugin-rs" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
opener = "0.7"
once_cell = "1.21.3"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2.3.1"
window-vibrancy = "0.5"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
local-ip-address = "0.6"
qrcode = "0.14"
base64 = "0.22"
tauri-plugin-shell = "2"
rand = "0.8"
tauri-plugin-single-instance = "2.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
